[metadata]
description-file = README.md

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10

[yapf]
based_on_style = pep8
indent_width = 4
use_tabs = False

[tool:pytest]
minversion = 6.0
testpaths = tests

[coverage:run]
branch = True
source = logdna/*

[coverage:html]
directory = coverage
show_contexts = True

[coverage:xml]
output = coverage/coverage.xml

[coverage:report]
fail_under = 67

